feat: add basic console.log for learning JavaScript

--- a/aula06/ex003..html
+++ b/aula06/ex003..html
@@ -25,6 +25,8 @@
         alert('A soma dos valores é ' + soma)// Concatenação 
        // (number + number) para adição
        // (string + string) para concatenação
+       let s = 'JavaScript'
+        console.log('estou aprendendo '+ s)
     </script>
 </body>
 </html>
