feat: add temperature check logic with dynamic feedback

--- a/aula06/example.html
+++ b/aula06/example.html
@@ -7,13 +7,22 @@
 </head>
 <body>
     <script>
-        let nome = prompt('Qual é o seu nome?')
-        let idade = Number(prompt('Qual a sua idade?'))
-        if(idade >= 18) {
-            document.write('Você é maior de idade!!')
-        } else {
-            document.write('Ainda não é maior de idade')
-        }
+        // let nome = prompt('Qual é o seu nome?')
+        // let idade = Number(prompt('Qual a sua idade?'))
+        // if(idade >= 18) {
+        //     document.write('Você é maior de idade!!')
+        // } else {
+        //     document.write('Ainda não é maior de idade')
+        // }
+
+         let temp = Number(prompt('Qual é a temperatura agora?'))
+    if (temp >= 30) {
+        document.write('Está bem quente! ☀️')
+    } else if (temp >= 20) {
+        document.write('Temperatura agradável 😎')
+    } else {
+        document.write('Está frio 🧊')
+    }
     </script>
 </body>
 </html>
