feat: add student grade input and approval check with if statement

--- a/aula06/example.html
+++ b/aula06/example.html
@@ -35,17 +35,26 @@
     //     alert('Você é idoso, tenha')
     // }    
 
-    let pontos = Number(prompt('Quantos pontos você fez?'))
+//     let pontos = Number(prompt('Quantos pontos você fez?'))
 
-if (pontos < 100) {
-    alert('Nível: Iniciante')
-} else if (pontos < 500) {
-    alert('Nível: Intermediário')
-} else if (pontos < 1000) {
-    alert('Nível: Avançado')
-} else {
-    alert('Nível: Mestre!')
-}
+// if (pontos < 100) {
+//     alert('Nível: Iniciante')
+// } else if (pontos < 500) {
+//     alert('Nível: Intermediário')
+// } else if (pontos < 1000) {
+//     alert('Nível: Avançado')
+// } else {
+//     alert('Nível: Mestre!')
+// }
+
+        let media = prompt("Digite a nota do aluno:") 
+        media = Number(media)
+
+        if(media >= 7) {
+            alert('Aprovado!')
+        } else {
+            alert('Reprovado!')
+        }
 
     </script>
 </body>
