feat: add student grade input using prompt and ternary operator

--- a/aula06/example.html
+++ b/aula06/example.html
@@ -47,14 +47,22 @@
 //     alert('Nível: Mestre!')
 // }
 
-        let media = prompt("Digite a nota do aluno:") 
-        media = Number(media)
+        // let media = prompt("Digite a nota do aluno:") 
+        // media = Number(media)
 
-        if(media >= 7) {
-            alert('Aprovado!')
-        } else {
-            alert('Reprovado!')
-        }
+        // if(media >= 7) {
+        //     alert('Aprovado!')
+        // } else {
+        //     alert('Reprovado!')
+        // }
+
+        let mediaEscolar = prompt("Digite a nota do aluno:")
+
+        mediaEscolar = Number(mediaEscolar) 
+
+        let resultado = mediaEscolar > 7 ? "Aprovado" : "Reprovado"
+
+        alert(resultado) 
 
     </script>
 </body>
