feat: add number input and parity check using ternary operator

--- a/aula06/example.html
+++ b/aula06/example.html
@@ -56,13 +56,19 @@
         //     alert('Reprovado!')
         // }
 
-        let mediaEscolar = prompt("Digite a nota do aluno:")
+        // let mediaEscolar = prompt("Digite a nota do aluno:")
 
-        mediaEscolar = Number(mediaEscolar) 
+        // mediaEscolar = Number(mediaEscolar) 
 
-        let resultado = mediaEscolar > 7 ? "Aprovado" : "Reprovado"
+        // let resultado = mediaEscolar > 7 ? "Aprovado" : "Reprovado"
 
-        alert(resultado) 
+        let x = prompt("Digite um número:")
+        x = Number(x) 
+
+        let res = x % 2 == 0 ? "Par" : "Ímpar"
+
+        alert(`O número ${x} é ${res}.`)
+ 
 
     </script>
 </body>
