feat: add script to check if a number is positive, negative, or zero

--- a/aula06/example.html
+++ b/aula06/example.html
@@ -62,14 +62,21 @@
 
         // let resultado = mediaEscolar > 7 ? "Aprovado" : "Reprovado"
 
-        let x = prompt("Digite um número:")
-        x = Number(x) 
+        //let x = prompt("Digite um número:")
+        //x = Number(x) 
 
-        let res = x % 2 == 0 ? "Par" : "Ímpar"
+        //let res = x % 2 == 0 ? "Par" : "Ímpar"
 
-        alert(`O número ${x} é ${res}.`)
+       // alert(`O número ${x} é ${res}.`)
+
+         let num = prompt("Digite um número:")
+        num = Number(num)
+
+        let resultado = num > 0 ? "positivo" : num < 0 ? "negativo" : "zero"
+
+        alert(`O número ${num} é ${resultado}.`)
+
  
-
     </script>
 </body>
 </html>
