feat: add script to calculate sum, square, and average of two numbers

--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -16,6 +16,16 @@
         document.write(`Seu nome tem ${nome.length} letras <br>`)
         document.write(`Seu nome em letras maiusculas <strong>${nome.toUpperCase()}<strong/>!! <br>`)
         document.write(`Seu nome em letras maiusculas ${nome.toLowerCase()}!! `)
+
+
+        let n1 = Number(prompt("Digite um número:"));
+        let n2 = Number(prompt("Digite outro número:"));
+        let soma = n1 + n2;
+
+        document.write(`A soma entre ${n1} e ${n2} é <strong>${soma}</strong> <br>`);
+        document.write(`O número ${n1} ao quadrado é ${n1 ** 2} <br>`);
+        document.write(`A média entre eles é ${(n1 + n2) / 2}`);
+
     </script>
 </body>
 </html>
