--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -17,10 +17,22 @@
     <h1>iniciando estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>aprendendo a usar o <strong>DOM</strong> em Javascript</p>
-    <div>Clique aqui</div>
+    <div id="msg">Clique aqui</div>
 
     <script>
-        window.document.write("Olá, Mundo!")
+        var corpo = window.document.body
+        var p1 = window.document.getElementsByTagName('p')[1]
+        document.write(p1.innerHTML)
+
+        //   var c = window.document.getElementsById('msg')
+        //   c.style.background = 'green'
+        //   c.innerText = 'Estou aguardando...'
+
+        //  var d = window.document.getElementsByName('msg')[0]
+        //  d.innerText = 'Olá'
+
+        var d = window.document.querySelector('div#msg')
+        d.style.background = 'red'
     </script>
  </body>
 </html>
